unpackaged/objects/sfcma__InvoiceItem__c.object
<CustomObject>
    <description>Contains information about a discrete billing and payment event for a specific time period. For example, a one-time charge or credit. Multiple invoice items can be associated with an invoice.</description>
    <fields>
        <fullName>sfcma__Amount__c</fullName>
        <description>The charge to be applied to the upcoming invoice.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfcma__Currency__c</fullName>
        <description>3-letter ISO code for currency.</description>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfcma__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sfcma__EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sfcma__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An existing invoice to add this invoice item to</description>
        <label>Invoice</label>
        <referenceTo>sfcma__Invoice__c</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>InvoiceItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfcma__IsProration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the invoice item was created automatically as a proration adjustment when the customer switched plans</description>
        <label>Proration?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfcma__Quantity__c</fullName>
        <description>Quantity of the subscription that the proration was computed for.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfcma__StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sfcma__StripeInvoiceItemIdUnique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Stripe Invoice Item Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sfcma__StripeInvoiceItemId__c</fullName>
        <externalId>true</externalId>
        <label>Stripe Invoice Item Id (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__SubscriptionPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the invoice item is a proration.</description>
        <label>Subscription Plan</label>
        <referenceTo>sfcma__SubscriptionPlan__c</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>InvoiceItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfcma__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice Item</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Checkout Invoice Item</label>
    <nameField>
        <displayFormat>II-{000000}</displayFormat>
        <label>Checkout Invoice Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkout Invoice Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>